--- a/documentos/templates/documentos/index_documentos.html
+++ b/documentos/templates/documentos/index_documentos.html
@@ -12,16 +12,22 @@
 {% endblock %}
 
 {% block content %}
-<span class="titulo">{{ titulo }}
-  {% if user.tipo_de_usuario == 4 %}
-    <small class="esconder">
-      <a
-        class="open-documento" style="cursor:pointer;"
-        data-url="{% url 'adiciona_documento' %}"
-        >&#10133;</a
-      >
-    </small>
-  {% endif %}
-</span>
-{% include "documentos/documentos.html" %}
+  
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+    {% if user.tipo_de_usuario == 4 %}
+      <small class="esconder">
+        <a
+          class="open-documento" style="cursor:pointer;"
+          data-url="{% url 'adiciona_documento' %}"
+          >&#10133;</a
+        >
+      </small>
+    {% endif %}
+  </span>  
+
+  {% include "documentos/documentos.html" %}
+  {% include "linguas.html" %}
+
 {% endblock %}
