--- a/documentos/templates/documentos/exibir_ocultar_notas.html
+++ b/documentos/templates/documentos/exibir_ocultar_notas.html
@@ -34,6 +34,6 @@
   </form>
 
 
-  {% include "edicoes_ajax.html" with tabela='Projetos' %}
+  {% include "edicoes_ajax.html" with tabela="Projetos" %}
   
 {% endblock %}
