--- a/templates/relatos.html
+++ b/templates/relatos.html
@@ -5,6 +5,7 @@
 {% endcomment %}
 
 {% load static %}
+{% load i18n %}
 <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
 <link rel="stylesheet" href="{% static 'css/tabela_reduzida_estudantes.css' %}">
 
@@ -14,8 +15,16 @@
     <tr style="padding-left: 18px;">
         <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}" {% if evento.em_prazo %}style="color: lightgray;"{% endif %}>{{ forloop.counter }}&ordm;</a></td>
         <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}" {% if evento.em_prazo %}style="color: lightgray;"{% endif %}>
-          <span class="opt_full">{{ evento.endDate|date:"DATE_FORMAT" }}</span>
-          <span class="opt_short">{{ evento.endDate|date:"d/m/Y" }}</span>
+          <span lang="pt">
+            <span class="opt_full">{{ evento.endDate|date:"DATE_FORMAT" }}</span>
+            <span class="opt_short">{{ evento.endDate|date:"d/m/Y" }}</span>
+          </span>
+          <span lang="en" style="display:none">
+            {% language 'en' %}
+              <span class="opt_full">{{ evento.endDate|date:"F d, Y" }}</span>
+              <span class="opt_short">{{ evento.endDate|date:"M d, Y" }}</span>
+            {% endlanguage %}
+          </span>
         </a></td>
         <td>
           {% for alocacao in alocacoes %}<a
@@ -25,12 +34,18 @@
         </td>
         <td>
         {% if evento.em_prazo %}
-          <span style="color:#edc300">Aguardando relatos</span>
+          <span style="color:#edc300">
+            <span lang="pt">Aguardando relatos</span>
+            <span lang="en" style="display:none">Awaiting reports</span>
+          </span>
         {% else %}
           {% if relatos %}
             {% if avaliados %}
               <a href="{% url 'relato_avaliar' projeto.id evento.id %}">
-                <span style="color:green">Avaliado pelo orientador</span>
+                <span style="color:green">
+                  <span lang="pt">Avaliado pelo orientador</span>
+                  <span lang="en" style="display:none">Evaluated by the advisor</span>
+                </span>
                 {% for avaliado in avaliados %}
                   <script>
                     {% if avaliado.0 %}
@@ -46,16 +61,25 @@
               </a>
             {% else %}
               <a href="{% url 'relato_avaliar' projeto.id evento.id %}">
-                <span style="color:brown">Aguardando avaliação do orientador</span>
+                <span style="color:brown">
+                  <span lang="pt">Aguardando avaliação do orientador</span>
+                  <span lang="en" style="display:none">Awaiting advisor evaluation</span>
+                </span>
               </a>
             {% endif %}
           {% else %}
-            <span style="color:red">Sem relatos dos estudantes</span>
+            <span style="color:red">
+              <span lang="pt">Sem relatos dos estudantes</span>
+              <span lang="en" style="display:none">No reports from students</span>
+            </span>
           {% endif %}          
         {% endif %}
       </td></tr>
   {% empty %}
-    <tr><td colspan="4">Nenhum relato para ser analisado no momento</td></tr>
+    <tr><td colspan="4">
+      <span lang="pt">Nenhum relato para ser analisado no momento</span>
+      <span lang="en" style="display:none">No report to be analyzed at the moment</span>
+    </td></tr>
   {% endfor %}
     </tbody></table>
 {% endif %}
