escondendo o menu hambuguer ao clicar fora dele

--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -1,5 +1,9 @@
 textarea {max-width:100%;}
 
+.hidden {display: none;}
+
+.visible {display: block;}
+
 .disabled {
   cursor: default;
   text-decoration: none;
